更新代码-增加vue-layer插件

--- a/index.html
+++ b/index.html
@@ -1,8 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"><!-- 设定字符编码集 -->
+    <meta http-equiv="Content-Language" content="zh-Hans-CN"><!-- 大陆地区使用的简体中文 -->
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"><!-- 使用最新渲染引擎渲染网页 -->
+    <meta http-equiv="Pragma" content="no-cache"><!-- 不缓存到计算机，达到禁止脱机浏览 -->
+    <meta name="renderer" content="webkit"><!-- 如果360浏览器 使用webkit（极速）内核渲染 -->
+    <meta http-equiv="Cache-Control" content="no-siteapp"><!-- 百度转码 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="description" content=""><!-- 描述信息 -->
+    <meta name="keywords" content=""><!-- 关键词信息 -->
+    <meta name="author" content="rexhang"><!-- 作者信息 -->
+    <link rel="icon" type="image/png" href="https://rexhang.com/img/rexhang.png">
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="icon" sizes="192x192" href="https://rexhang.com/img/rexhang.png">
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="webapp"/>
+    <link rel="apple-touch-icon-precomposed" href="https://rexhang.com/img/rexhang.png">
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="https://rexhang.com/img/rexhang.png">
+    <meta name="msapplication-TileColor" content="#0e90d2">
     <title>app</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
     <div id="app"></div>
